--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,16 +1,191 @@
 
-<nav class="nav">
-<a routerLink="/newCommittee">📞חבר חדש</a>
-<a href="#aboutUs">__אודותינו__</a>
-<a href="#contact">יצירת קשר</a>
-</nav>
-<div class="center">
-<p>התחברות דיירים / ועד בית</p>
-
-<h3> קיבלת קוד התחברות ראשונית? לחץ כאן</h3>
-    <input class="input" placeholder='הכנס את כתובת המייל שלך' [(ngModel)]="d.MailAddress" name="mail"/> <br><br>
-    <input class="input" type="password" placeholder='הכנס סיסמה' [(ngModel)]="d.PsWord" name="pass"/><br><br>
-    <button class="buttons" (click)="enter()">התחבר</button> <!--head-committee--><br><br><br>
+<header>
+    <nav class="navbar navbar-expand-lg  fixed-top bg-danger shadow-lg p-3 mb-5 rounded opacity-75">
+      <div class="container-fluid" style="direction: rtl">
+        <div mdbCollapse class="collapse navbar-collapse" id="fixedNavbarExample">
+          <ul class="navbar-nav mb-2 mb-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" aria-current="page" routerLink="/newCommittee" style="cursor: pointer">חבר חדש</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#aboutUs">אודותינו</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">יצירת קשר</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../../../assets/building-7092747_1920.jpg" class="d-block w-100 img-slide-top" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <div class="bg-secondary p-5 text-white bg-opacity-75" style='width:400px; height:400px;'>
+            <div>
+              <h2 class="fw-bold">התחברות דיירים / ועד בית</h2>
+  
+              <p>קיבלת קוד התחברות ראשונית? לחץ כאן</p>
+              <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">כתובת אימייל</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    [(ngModel)]="d.MailAddress" name="mail">
+                  <label class="form-label">.לא נשתף את כתובת האימייל שלך עם אף אחד אחר</label>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">סיסמא</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="d.PsWord"
+                    name="pass">
+                </div>
+                <button type="submit" class="btn btn-danger btn-lg mt-2 px-3 w-100" (click)="enter()">התחבר</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
+  <div class="center pb-2 mx-auto">
+    <div class="my-5">
+      <h2 id='#aboutUs' class="fw-bold mb-0">?מה הוא יכול לעשות עבורכם</h2>
+      <p>אלו רק חלק מהיכולות המדהימות של וועד חכם</p>
+    </div>
+    <table class="mx-auto mb-5">
+      <tr>
+        <td>
+          <div class="d-flex bd-highlight">
+            <div class="p-2 w-100 bd-highlight">
+              <h2>
+                ניהול ודיווח תקלות
+              </h2>
+              <h3>
+                כל דייירי הבניין יוכלו לדווח על תקלות ולקבל<br />.עדכון על טיפולן
+                ועלות הטיפול
+              </h3>
+            </div>
+            <div class="p-2 flex-shrink-1 bd-highlight my-auto">
+              <img src="../../../assets/high_priority-144.png" width="80px">
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="d-flex bd-highlight">
+            <div class="p-2 w-100 bd-highlight">
+              <h2>
+                החלטות משותפות
+              </h2>
+  
+              <h3>
+                תוכלו ליצור סקרים ולהחליט ביחד מה יהיה אופי <br />הגינה החדשה, או איזה
+                סוג שיפוץ יבוצע בחלל<br />.הכניסה
+              </h3>
+            </div>
+            <div class="p-2 flex-shrink-1 bd-highlight my-auto">
+              <img src="../../../assets/document-96.png" width="80px">
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="d-flex bd-highlight">
+            <div class="p-2 w-100 bd-highlight">
+              <h2>
+                תזכורות לתשלומים
+              </h2>
+              <h3>
+                מהיום לדיירים בבניין<br />יהיה אפשרות לקבל <br />
+                תזכורות למייל עבור תשלומים
+              </h3>
+            </div>
+            <div class="p-2 flex-shrink-1 bd-highlight my-auto">
+              <img src="../../../assets/Crediticon.png" width="80px">
+            </div>
+          </div>
+        </td>
+      </tr>
+      <tr class="pt-5">
+        <td>
+          <div class="d-flex bd-highlight">
+            <div class="p-2 w-100 bd-highlight">
+              <h2>
+                ניהול הבניין
+              </h2>
+              <h3>
+                ,ניהול תהליכי היום יום תוך מיקוד בחסכון בזמן<br />
+                .חסכון והתייעלות
+              </h3>
+            </div>
+            <div class="p-2 flex-shrink-1 bd-highlight my-auto">
+              <img src="../../../assets/organization-144.png" width="80px">
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="d-flex bd-highlight">
+            <div class="p-2 w-100 bd-highlight">
+              <h2>
+                הודעות בין הדיירים
+              </h2>
+              <h3>
+                הלוח מאפשר דו שיח בין כל דיירי הבניין <br />,בצורה פשוטה וידידותית<br />
+                ...'וזהו בדיוק המקום להעלות סיכום של ישיבת הועד וכו
+              </h3>
+            </div>
+            <div class="p-2 flex-shrink-1 bd-highlight my-auto">
+              <img src="../../../assets/surveyicon.png" width="80px">
+            </div>
+          </div>
+        </td>
+        <td>
+          <div class="d-flex bd-highlight">
+            <div class="p-2 w-100 bd-highlight">
+              <h2>
+                צפייה בהוצאות והכנסות
+              </h2>
+              <h3>
+                כל דיירי הבניין יוכלו לצפות<br />באופן גורף בניהול הוצאות <br />
+                .והכנסות בבנייין
+              </h3>
+            </div>
+            <div class="p-2 flex-shrink-1 bd-highlight my-auto">
+              <img src="../../../assets/moneygraph.png" width="80px">
+            </div>
+          </div>
+        </td>
+      </tr>
+    </table>
+  
+    <div class="shadow-lg p-3 mx-auto mb-5 bg-body rounded" style="width: 60vw">
+      <h2 id="contact" class="fw-bold mb-0">יצירת קשר</h2>
+      <p>נשמח לעזור ולענות על כל שאלה שתעלה</p>
+      <table class="mx-auto mt-5">
+        <tr>
+          <td class="px-5">
+            <img src="../../../assets/parts-1086747_1280.png" width="60px">
+            <h2 class="mb-0"> עקבו אחרינו בפייסבוק</h2>
+            <p>חברים 245</p>
+          </td>
+  
+          <td class="px-5">
+            <img src="../../../assets/smartphone-1132677_1280.png" width="60px">
+            <h2 class="mb-0"> צלצלו אלינו</h2>
+            <p>0735422567</p>
+          </td>
+  
+          <td class="px-5">
+            <img src="../../../assets/letter-1132703_1280.png" width="60px">
+            <h2 class="mb-0">שלחו לנו מייל</h2>
+            <p>לחצו כאן</p>
+          </td>
+        </tr>
+      </table>
+    </div>
+  
 <!-- <p>...אחינועם שלושת הקישורים פה למטה הם לא אמורים להיות פה בעיקרון אז  אל תתיחסי אליהם זה דפים שאמורים להשלח למייל של הדיירים אני באמצע.</p>
 <a routerLink="/password-change">
     אישור רישום ושינוי סיסמה
@@ -22,24 +197,3 @@
    שליחת קישור לסקר
 </a> -->
 
-<p id="aboutUs">?מה הוא יכול לעשות עבורכם</p>
-<h2>אלו רק חלק מהיכולות המדהימות של וועד חכם</h2>
-------<br><br>
-<table>
-<tr>
-    <td>ניהול ודיווח תקלות<h3>כל דייירי הבניין יוכלו לדווח על תקלות ולקבל<br>.עדכון על טיפולן ועלות הטיפול</h3></td>
-    <td>החלטות משותפות<h3>תוכלו ליצור סקרים ולהחליט ביחד מה יהיה אופי  <br>הגינה החדשה, או איזה סוג שיפוץ יבוצע בחלל<br>.הכניסה</h3></td>
-    <td>תזכורות לתשלומים<h3>מהיום לדיירים בבניין<br>יהיה אפשרות לקבל <br> תזכורות למייל עבור תשלומים</h3></td>
-</tr>
-<tr>
-    <td>ניהול הבניין<h3>,ניהול תהליכי היום יום תוך מיקוד בחסכון בזמן<br> .חסכון והתייעלות</h3></td>
-    <td>הודעות בין הדיירים<h3>הלוח מאפשר דו שיח בין כל דיירי הבניין <br>,בצורה פשוטה וידידותית<br> ...'וזהו בדיוק המקום להעלות סיכום של ישיבת הועד וכו</h3></td>
-    <td>צפייה בהוצאות והכנסות<h3>כל דיירי הבניין יוכלו לצפות<br>באופן גורף בניהול הוצאות <br> .והכנסות בבנייין</h3></td>
-</tr>
-</table><br><br><br>
- <p id="contact">יצירת קשר</p>
-       <h2> נשמח לעזור ולענות על כל שאלה שתעלה</h2>
-       <table>
-           <tr><td>עקבו אחרינו בפייסבוק<h3>חברים 245</h3></td><td>צלצלו אלינו<h3>0735422567</h3></td><td>שלחו לנו מייל<h3>לחצו כאן</h3></td></tr>
-       </table>
-</div>
