--- a/src/app/components/list-dayarim/list-dayarim.component.html
+++ b/src/app/components/list-dayarim/list-dayarim.component.html
@@ -1,25 +1,35 @@
 <h2>רשימת דיירים</h2>
-<!--למה רק אחרי לחיצה כפולה הוא מציג לי את הטבלה-->
-<!--<label for="dayar">list</label><br/> 
-      <select id="dayar" name="listDayarim"> 
-       
-          <option *ngFor="let dayar of listDayarim" > {{dayar.FirstName}}</option>
-      </select >
-      <br/>--><!--[(ngModel)]="building.CityId"  [ngValue]="city.CityId"-->
    
 <div *ngIf="isShow===true">
-    <input type="text" placeholder="...חיפוש דייר" name="search" [(ngModel)]="searchValue"/>
-       <!-- (keyup)="quickSearch()"
-         | filter: searchValue
-         <input class="buttons" type="button" value="search" (click)="sortByName()"><br>
-   <button (click)="back()">חזור</button>  -->
+    <input type="text" placeholder="...חיפוש דייר" name="search"  (keyup)="onKey($event)"/>
+    <div *ngIf="listD1.length!=0">
+    <table class="table">
+        <thead>
+            <tr *ngIf="dayarSer.dayar.IsHouseCommittee" class="th"><th class="topic" *ngFor="let topic of topics">  {{topic}}  </th></tr>
+            <tr *ngIf="!dayarSer.dayar.IsHouseCommittee" class="th"><th class="topic" *ngFor="let topic2 of topics2">  {{topic2}}  </th></tr>
+           
+        <tr class="td" *ngFor="let Dayar of listD1"> 
+            <td *ngIf="dayarSer.dayar.IsHouseCommittee"><button (click)="edit(Dayar)">✍🏻</button></td> 
+            <td *ngIf="dayarSer.dayar.IsHouseCommittee">₪{{Dayar.SumToMonth}}</td>
+            <td >{{Dayar.MailAddress}}</td>
+            <td >{{Dayar.Phone}}</td>
+            <td >דירה  {{Dayar.NumFlat}}</td>
+            <td >{{Dayar.LastName}}</td>
+            <td *ngIf="!Dayar.FirstName">דירה - {{Dayar.NumFlat}}</td>
+            <td >{{Dayar.FirstName}}</td>  
+       
+            </tr>   
+       </thead>
+    </table>
+</div>
+   <div *ngIf="listD1.length==0">
 <table class="table">
     <thead>
         <tr *ngIf="dayarSer.dayar.IsHouseCommittee" class="th"><th class="topic" *ngFor="let topic of topics">  {{topic}}  </th></tr>
         <tr *ngIf="!dayarSer.dayar.IsHouseCommittee" class="th"><th class="topic" *ngFor="let topic2 of topics2">  {{topic2}}  </th></tr>
        
     <tr class="td" *ngFor="let Dayar of dayarSer.listD"> 
-        <td *ngIf="dayarSer.dayar.IsHouseCommittee"><button (click)="edit(Dayar)">✍🏻</button></td> <!--*ngIf="dayar.IsHouseCommittee==true"-->
+        <td *ngIf="dayarSer.dayar.IsHouseCommittee"><button (click)="edit(Dayar)">✍🏻</button></td>
         <td *ngIf="dayarSer.dayar.IsHouseCommittee">₪{{Dayar.SumToMonth}}</td>
         <td >{{Dayar.MailAddress}}</td>
         <td >{{Dayar.Phone}}</td>
@@ -31,7 +41,8 @@
         </tr>   
    </thead>
 </table>
-</div><!--dayarSer.listD-->
+</div>
+</div>
 <div *ngIf="isShow===false">
     <app-edit-dayar [dayar]="dayarToEdit" (onSave)="onMySave($event)"></app-edit-dayar><!---->
 </div>
