--- a/src/app/components/creating-survey/creating-survey.component.html
+++ b/src/app/components/creating-survey/creating-survey.component.html
@@ -1,22 +1,47 @@
-<h2>יצירת סקר חדש</h2>
-<form>
-    <input class="input" type="text" name="SubSurvey" required  [(ngModel)]="survey.SubSurvey" /> שאלה <br><br>
-    <select  name="Type" required  [(ngModel)]="survey.Type">
-      <option selected="true" [value]="null" disabled>בחר אפשרות</option>
-      <option >בחירה ייחודית</option>
-        <option >טקסט חופשי</option>
-        </select >
-        סוג שאלה<br><br>
-        <div *ngIf="survey.Type=='בחירה ייחודית'"><!--*ngIf="dayarSer.select"     [(ngModel)]="dayarSer.select"-->
-      <input class="input" type="string" name="Op1" required  [(ngModel)]="survey.Op1"/> תשובה <br><br>
-      <input class="input" type="string" name="Op2" required  [(ngModel)]="survey.Op2"/> תשובה <br><br>
-       <button (click)="addOp()">➕</button><br><br>
-      <div *ngIf="surveysSer.numOp >= 1"><button (click)="lessOp()">➖</button><input class="input" type="string" name="Op3" required  [(ngModel)]="survey.Op3"/> תשובה </div><br>
-      <div *ngIf="surveysSer.numOp >=2"><button (click)="lessOp()">➖</button><input class="input" type="string" name="Op4" required  [(ngModel)]="survey.Op4"/> תשובה </div><br>
-      <div *ngIf="surveysSer.numOp >=3"><button (click)="lessOp()">➖</button><input class="input" type="string" name="Op5" required  [(ngModel)]="survey.Op5"/> תשובה </div><br>
-      <div *ngIf="surveysSer.numOp >=4"><button (click)="lessOp()">➖</button><input class="input" type="string" name="Op6" required  [(ngModel)]="survey.Op6"/> תשובה </div>
-     
-    </div> <br>
+<div class="form-wrapper">
+  <mat-icon class="icon-back" (click)="back()">arrow_back_ios</mat-icon>
+   
+  <h1>יצירת סקר חדש</h1> <br>
+  <form>
+   
+    <div class="row-wrapper">
+
+      <label>שאלה</label>
+      <input class="input" type="text" name="SubSurvey" required [(ngModel)]="survey.SubSurvey" />
+    </div>
+    <div class="row-wrapper">
+      <label>סוג שאלה</label>
+      <select class="input" name="Type" required [(ngModel)]="survey.Type">
+        <option selected="true" [value]="null" disabled>בחר אפשרות</option>
+        <option>בחירה ייחודית</option>
+        <option>טקסט חופשי</option>
+      </select>
+    </div>
+
+
+    <div *ngIf="survey.Type=='בחירה ייחודית'">
+      <!--*ngIf="dayarSer.select"     [(ngModel)]="dayarSer.select"-->
+      <div class="row-wrapper">
+        <label>תשובה </label>
+        <input class="input" type="string" name="Op1" required [(ngModel)]="survey.Op1" />
+      </div>
+      <div class="row-wrapper">
+        <label>תשובה </label>
+
+        <input class="input" type="string" name="Op2" required [(ngModel)]="survey.Op2" />
+      </div>
+      <mat-icon class="mat-add-small" (click)="addOp()">add</mat-icon>
+      <!-- <button (click)="addOp()">➕</button><br><br> -->
+      <div class="row-wrapper reverse" *ngIf="surveysSer.numOp >= 1"> <mat-icon class="mat-set" (click)="lessOp()">close</mat-icon><input class="input" type="string"
+          name="Op3" required [(ngModel)]="survey.Op3" />    <label>תשובה </label> </div>
+      <div class="row-wrapper reverse" *ngIf="surveysSer.numOp >=2"> <mat-icon class="mat-set" (click)="lessOp()">close</mat-icon><input class="input" type="string"
+          name="Op4" required [(ngModel)]="survey.Op4" />    <label>תשובה </label> </div>
+      <div class="row-wrapper reverse" *ngIf="surveysSer.numOp >=3"> <mat-icon class="mat-set" (click)="lessOp()">close</mat-icon><input class="input" type="string"
+          name="Op5" required [(ngModel)]="survey.Op5" />    <label>תשובה </label> </div>
+      <div class="row-wrapper reverse" *ngIf="surveysSer.numOp >=4"> <mat-icon class="mat-set" (click)="lessOp()">close</mat-icon><input class="input" type="string"
+          name="Op6" required [(ngModel)]="survey.Op6" />    <label>תשובה </label> </div>
+
+    </div> 
     <!-- <p> :בחר תאריך אחרון למענה הסקר </p><br>
     <mat-form-field appearance="fill">
       <mat-label>Choose a date</mat-label>
@@ -26,6 +51,7 @@
     </mat-form-field><br>
     <input type="number" [(ngModel)]="numDays"/>לאחר כמה ימים מהתאריך האחרון למענה, הסקר יעבור לרשימת סקרים ישנים?<br>
      -->
-      <button class="buttons" (click)="saveSurvey()">שמור סקר</button>
-</form>
+    <button class="buttons" (click)="saveSurvey()">שמור סקר</button>
+  </form>
 
+</div>
