--- a/src/app/components/dayar/dayar.component.html
+++ b/src/app/components/dayar/dayar.component.html
@@ -1,13 +1,33 @@
 
+
+<header>
+  <nav class="navbar navbar-expand-lg  fixed-top bg-danger shadow-lg p-3 mb-5 rounded opacity-75">
+    <div class="container-fluid" style="direction: rtl">
+      <div mdbCollapse class="collapse navbar-collapse" id="fixedNavbarExample">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#">שלום   {{this.d.dayar.FirstName}} {{this.d.dayar.LastName}}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#aboutUs">אודותינו</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">יצירת קשר</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
 <div class="container mt-3">
-  {{this.d.dayar.FirstName}}
-  {{this.d.dayar.LastName}}<br>
+  <!-- {{this.d.dayar.FirstName}}
+  {{this.d.dayar.LastName}}<br> -->
   <div *ngIf="dayarSer.dayar.BuildingId!=undefined">{{this.buildingSer.buildingAddress.Street}}
     {{this.buildingSer.buildingAddress.NumBuilding}}<br>
     {{this.city.CityName}}</div>
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/dayar/deshbord">דשבורד</a><!--deshbord-->
+        <a class="nav-link" routerLink="/dayar/deshbord">לוח נתונים</a><!--deshbord-->
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/dayar/discourse-dayarim">לוח הודעות דיגיטלי</a><!--discourse-dayarim-->
@@ -42,4 +62,12 @@
      
     </ul>
   </div>
-<router-outlet></router-outlet>
+  <div class="bg"></div>
+  <div style="height: 88vh">
+     
+      <div class="content-div">
+          <router-outlet></router-outlet>
+      </div>
+  </div>
+
+<!-- <router-outlet></router-outlet> -->
