--- a/src/app/components/hachnasot/hachnasot.component.html
+++ b/src/app/components/hachnasot/hachnasot.component.html
@@ -1,7 +1,10 @@
-<p>hachnasot works!</p>
-<label for="Hachnasot">:הכנסות</label><br/> 
-<input class="input" #Hachnasot="ngModel" id="Hachnasot" name="Hachnasot" type="number" required [(ngModel)]="hachnasot"/>  
- 
- <br/>
- <button (click)="save()">שמור</button>
- <button (click)="back()">חזרה</button>
+
+<main class="form-wrapper">
+    <h1 for="Hachnasot">הכנסות</h1><br />
+    <input class="input" #Hachnasot=ngModel id="Hachnasot" name="Hachnasot" type="number" required
+        [(ngModel)]="hachnasot" />
+
+    <br />
+    <button (click)="save()">שמור</button>
+    <button (click)="back()">חזרה</button>
+</main>
