--- a/src/app/components/head-committee/head-committee.component.html
+++ b/src/app/components/head-committee/head-committee.component.html
@@ -1,55 +1,68 @@
 
-<div class="container mt-3">
-  {{this.d.dayar.FirstName}}
-  {{ this.d.dayar.LastName}}<br>
-  <div *ngIf="dayarSer.dayar.BuildingId!=undefined">{{this.buildingSer.buildingAddress.Street}}
-  {{this.buildingSer.buildingAddress.NumBuilding}}<br>
-  {{this.city.CityName}}</div>
-  <!--פה אמור להציג את שם המשתמש שנכנס -->
-    <ul class="nav flex-column">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/deshbord">דשבורד</a><!--deshbord-->
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/discourse-dayarim">לוח הודעות דיגיטלי</a><!--discourse-dayarim-->
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/list-dayarim">רשימת דיירים</a><!--list-dayarim-->
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/surveys">סקרים</a><!--surveys-->
-      </li>
-     <!-- <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/committee-payments">תשלומי ועד</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/special-payments">תשלומים מיוחדים</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/expenses">הוצאות</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/suppliers">ספקים</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/bank-transfers">העברות לבנק</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/documents">מסמכים</a>
-      </li>
-    <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/messages">הודעות</a>
-      </li>-->
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/faults">תקלות</a><!--faults-->
-      </li>
-      <li *ngIf="d.dayar.IsHouseCommittee" class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/committee-payments">תזכורות לתשלומים</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/headCommittee/bank-transfers">פרטי בנק</a>
-      </li>
-      
-    </ul>
-  </div>
-<router-outlet></router-outlet>
+
+
+<header>
+  <nav class="navbar navbar-expand-lg  fixed-top bg-danger shadow-lg p-3 mb-5 rounded opacity-75">
+    <div class="container-fluid" style="direction: rtl">
+      <div mdbCollapse class="collapse navbar-collapse" id="fixedNavbarExample">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#">שלום   {{this.d.dayar.FirstName}} {{this.d.dayar.LastName}}</a>
+          </li>
+       
+          <li class="nav-item" *ngIf="dayarSer.dayar.BuildingId!=undefined">
+            <a class="nav-link" href="#">{{this.buildingSer.buildingAddress.Street}}
+              {{this.buildingSer.buildingAddress.NumBuilding}}<br>
+              {{this.city.CityName}}</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav opened mode="side" position="end" class="side-cont-admin">
+      <mat-nav-list>
+
+          <a mat-list-item  routerLink="/headCommittee/deshbord"
+         routerLinkActive="active_link">
+              <mat-icon>dashboard</mat-icon> &nbsp;לוח נתונים
+          </a>
+          <a mat-list-item
+          
+          routerLink="/headCommittee/discourse-dayarim"
+          
+          routerLinkActive="active_link">
+              <mat-icon>message</mat-icon> &nbsp;לוח הודעות דיגיטלי
+          </a>
+
+        
+          <a mat-list-item routerLink="/headCommittee/list-dayarim" routerLinkActive="active_link">
+              <mat-icon>wc</mat-icon> &nbsp;רשימת דיירים
+          </a>
+          <a mat-list-item  routerLink="/headCommittee/surveys" routerLinkActive="active_link">
+              <mat-icon>star</mat-icon> &nbsp;סקרים
+          </a>
+          <a mat-list-item routerLink="/headCommittee/faults" routerLinkActive="active_link">
+            <mat-icon>error</mat-icon> &nbsp;תקלות
+        </a>
+        <a mat-list-item routerLink="/headCommittee/committee-payments" routerLinkActive="active_link">
+          <mat-icon>payment</mat-icon> &nbsp;תזכורות לתשלומים
+      </a>
+      <a mat-list-item   routerLink="/headCommittee/bank-transfers" routerLinkActive="active_link">
+        <mat-icon>money</mat-icon> &nbsp;פרטי בנק
+    </a>
+      </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+      <div class="bg"></div>
+      <div style="height: calc(100vh - 110px);">
+         
+          <div class="content-div">
+              <router-outlet></router-outlet>
+          </div>
+      </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
