--- a/src/app/components/home-committee/home-committee.component.html
+++ b/src/app/components/home-committee/home-committee.component.html
@@ -1,6 +1,6 @@
-<div class="center">
+<div class="center form-wrapper">
     <div class="size">🏠</div>
-    <h2>על מנת להמשיך תחילה עלייך </h2>
-    <h2> ליצור ולהגדיר את הבניין שלך</h2>
+    <h2 style="margin-top: 20px;">על מנת להמשיך,   </h2>
+    <h2> עלייך ליצור ולהגדיר את הבניין שלך. </h2>
     <button class="buttons" routerLink="/headCommittee/creatingBuilding">יצירת בניין</button>
 </div>
