--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,35 +1,34 @@
-
-.nav{
-    text-align: right;
+.nav {
+  text-align: right;
 }
 
-.nav-link{
-color:white !important;
-font-size: 15px;
+.nav-link {
+  color: white !important;
+  font-size: 15px;
 }
 
-.center{
-  width:80vw;
+.center {
+  width: 80vw;
   text-align: center;
 }
 
-.img-slide-top{
- height:100vh !important;
+.img-slide-top {
+  height: 100vh !important;
 }
 
-a{
+a {
   color: white !important;
 }
 
 .d-block {
   display: block;
-} 
-
-h3{
-  color:grey;
 }
 
-p{
-  font-size:16px;
-} 
+h3 {
+  color: grey;
+}
 
+p {
+  font-size: 16px;
+}
+.d-flex{flex-flow: row-reverse;}
