--- a/src/app/components/newCommittee/newCommittee.component.css
+++ b/src/app/components/newCommittee/newCommittee.component.css
@@ -1,22 +1,21 @@
-
-.ng-valid[required],.ng-valid.required{
-    border-left: 5px solid #42A948;/*green*/
-
+.ng-valid[required],
+.ng-valid.required {
+    border-left: 5px solid #42a948; /*green*/
 }
-.ng-invalid:not(form){
-    border-left: 5px solid 3a94442;/*red*/
+.ng-invalid:not(form) {
+    border-left: 5px solid 3a94442; /*red*/
 }
 
-.backgroundcolor{ 
-    margin: 0 auto; 
-    text-align: center ;  
-  }
-  
-  .buttons{
+.backgroundcolor {
+    margin: 0 auto;
+    text-align: center;
+}
+
+/* .buttons {
     background-color: rgb(213, 213, 226);
     border-radius: 5px;
     font-size: 30px;
-   }
-   .red{
-       color: firebrick;
-   }
+} */
+.red {
+    color: firebrick;
+}
