--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
-/* You can add global styles to this file, and also import other style files *//* You can add global styles to this file, and also import other style files */
-.buttons{
+/* You can add global styles to this file, and also import other style files */
+
+.buttons {
     background-color: rgb(213, 213, 226);
     border-radius: 5px;
     font-size: 20px;
@@ -11,7 +12,7 @@
     text-align: right;
 }
 
-.center{
+.center {
     text-align: right;
     font-size: 15px;
 }
@@ -27,5 +28,302 @@ body {
 
 input {
     font-size: 15px !important;
-    direction: rtl ;
+    direction: rtl;
+}
+mat-sidenav-container {
+    display: flex;
+}
+
+mat-sidenav {
+    margin-top: 70px;
+    width: 220px;
+    right: 0 !important;
+    box-shadow: 0 16px 38px -12px rgb(155 155 155 / 56%), 0 4px 25px 0 rgb(0 0 0 / 12%),
+        0 8px 10px -5px rgb(0 0 0 / 20%);
+    /* box-shadow: 0 16px 38px -12px rgb(0 0 0 / 56%), 0 4px 25px 0 rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(0 0 0 / 20%); */
+}
+
+mat-sidenav-content {
+    width: calc(100% - 220px);
+    margin-top: 70px;
+    left: 0 !important;
+    margin-right: 220px !important;
+    margin-left: 0;
+    padding: 20px;
+}
+.mat-drawer-inner-container {
+    overflow: hidden !important;
+}
+.carousel-caption {
+    direction: ltr;
+    bottom: 8rem;
+}
+mat-sidenav-container {
+    display: flex;
+}
+mat-nav-list {
+    display: block;
+    height: calc(100vh - 70px);
+    background-color: #393a3b6b;
+    color: white;
+    text-align: right;
+    direction: rtl;
+    padding-top: 10px;
+}
+a:hover {
+    text-decoration: none;
+    color: white;
+    transition: all 0.2s ease-in-out;
+}
+mat-nav-list a:hover {
+    font-weight: bold;
+}
+mat-nav-list a {
+    display: block;
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 50px;
+    border-bottom: 1px solid rgb(235, 235, 235);
+    color: white !important;
+    margin: 2px 20px;
+}
+mat-nav-list a .mat-icon {
+    vertical-align: middle;
+    font-size: 20px;
+    height: 20px;
+    width: 20px;
+}
+mat-sidenav-container {
+    display: flex;
+}
+
+.form-wrapper h1,
+.table-wrapper h1,
+.mat-typography h1.h1-title {
+    text-align: center;
+    color: #dd6d78;
+    font-weight: 100;
+    font-size: 2.5rem;
+    line-height: 5rem;
+    border-bottom: 1px solid;
+    width: 250px;
+    margin: auto;
+}
+.bg {
+    background: url("../src/assets/building-7092747_1920.jpg");
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    top: 0;
+    right: 0;
+    opacity: 0.1;
+    z-index: -1;
+}
+.form-wrapper label,
+mat-cardlabel {
+    font-weight: 100;
+    font-size: medium;
+    margin-bottom: 0.3rem;
+}
+
+.form-wrapper-large label,
+.form-wrapper-sub label {
+    font-size: small;
+    margin-bottom: 0;
+    font-weight: 100;
+}
+
+.footer-wrapper,
+.header-wrapper {
+    text-align: center;
+    width: 100%;
+}
+
+.error {
+    font-size: 11px;
+    color: red;
+    margin-bottom: -15px;
+    margin-top: -3px;
+    margin-left: 1px;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+    background-color: white;
+}
+
+.mat-radio-group {
+    direction: rtl;
+}
+
+.mat-toolbar a:hover {
+    color: white;
+    font-weight: bold;
+    /* border-bottom: 1px solid; */
+    text-decoration: underline;
+}
+
+.active_link {
+    font-weight: bold;
+}
+
+.mat-select-panel .mat-optgroup-label,
+.mat-select-panel .mat-option {
+    direction: rtl;
+    text-align: right;
+}
+
+.mat-radio-label-content {
+    margin-right: 3px;
+}
+
+.table-wrapper {
+    overflow: auto;
+    max-height: calc(100vh - 330px);
+    width: 90%;
+    box-shadow: 0 0 85px rgb(0 0 0 / 20%);
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.table-wrapper .table {
+    width: 100%;
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.mat-table {
+    text-align: right;
+    direction: rtl;
+    background-color: white;
+    color: #ff4081 !important;
+    box-shadow: none;
+}
+
+.mat-select-value {
+    color: #ff4081 !important;
+}
+.row-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-flow: row-reverse;
+    margin-bottom: 12px;
+}
+.row-wrapper label {
+    min-width: 80px;
+    text-align: right;
+    font-size: 14px;
+}
+.table > thead > tr > th {
+    color: white;
+    font-weight: 100;
+    font-size: 1.4rem;
+    position: relative;
+    border: none;
+    text-align: center;
+    background-color: #dd6d78;
+}
+.input {
+    border-radius: 15px;
+    border: 2px solid #dd6d78;
+    font-size: 14px;
+    line-height: 32px;
+    height: 32px;
+    padding: 0 5px;
+}
+.form-wrapper,
+.form-wrapper-100 {
+    text-align: center;
+    margin: 20px auto;
+    padding: 30px;
+    direction: rtl;
+    color: #dd6d78 !important;
+    flex-grow: 1;
+    position: relative;
+    font-size: 18px;
+    line-height: 36px;
+    max-width: 400px;
+    min-width: 300px;
+    opacity: 0.8;
+    height: calc(90% - 124px);
+    top: 5%;
+    box-shadow: -1px 0px 0px 0px #dd6d78, -1px -2px 20px 0px #dd6d78, 0px 0px 10px -5px #dd6d78;
+}
+.form-wrapper button,
+.form-wrapper button.buttons,
+.buttons {
+    width: 100%;
+    max-width: 200px;
+    color: #fff !important;
+    background-color: #dc3545 !important;
+    border-color: #dc3545;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1.5rem;
+    border-radius: 20px;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+        box-shadow 0.15s ease-in-out;
+}
+.icon-back {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    left: 15px;
+}
+.mat-icon.mat-add {
+    font-size: 36px;
+    width: 40px;
+    height: 40px;
+    line-height: 34px;
+    border: 3px solid;
+    padding-right: 5px;
+    margin-left: -2px;
+    color: #dd6d78;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.mat-icon.mat-add-small {
+    font-size: 24px;
+    width: 30px;
+    height: 30px;
+    line-height: 24px;
+    border: 3px solid;
+    padding-right: 5px;
+    margin-left: -2px;
+    color: #dd6d78;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.mat-icon.mat-set {
+    color: #dd6d78;
+    border: 1px solid;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    margin: 2px 8px;
+    line-height: 29px;
+    font-size: 20px;
+    padding-left: 0px;
+    padding-bottom: 2px;
+    cursor: pointer;
+}
+
+.mat-set:hover {
+    background-color: #dd6d78;
+    color: white;
+    border-color: white;
 }
