--- a/src/app/components/deshbord/deshbord.component.css
+++ b/src/app/components/deshbord/deshbord.component.css
@@ -148,7 +148,7 @@ mat-icon {
 .round {
     width: 150px;
     height: 150px;
-    background: #dd6d78;
+    background: #d2232a;
     /* background: linear-gradient(131deg, #af6b6b, #9f9293); */
     border-radius: 50%;
     padding: 20px;
