--- a/src/app/components/discourse-dayarim/discourse-dayarim.component.css
+++ b/src/app/components/discourse-dayarim/discourse-dayarim.component.css
@@ -4,8 +4,8 @@
 }
 .icon-send {
     position: absolute;
-    right: 230px;
-    color: #dd6d78;
+    right: 355px;
+    color: #d2232a;
     transform: rotate(180deg);
     margin-top: 2px;
     cursor: pointer;
