--- a/src/app/components/dayar/dayar.component.html
+++ b/src/app/components/dayar/dayar.component.html
@@ -27,6 +27,9 @@
     {{this.city.CityName}}</div>
     <ul class="nav flex-column">
       <li class="nav-item">
+       <div class="logo"></div>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/dayar/deshbord">לוח נתונים</a><!--deshbord-->
       </li>
       <li class="nav-item">
