--- a/src/app/components/list-dayarim/list-dayarim.component.css
+++ b/src/app/components/list-dayarim/list-dayarim.component.css
@@ -32,20 +32,20 @@ table button {
   width: 32px;
   padding: 0 2px;
   padding-bottom: 5px;
-  border-color: #dd6d78;
+  border-color: #d2232a;
 }
 .topic {
   text-align: center;
 }
 .icon-search {
   position: absolute;
-  right: 230px;
-  color: #dd6d78;
+  right: 350px;
+  color: #d2232a;
   margin-top: 2px;
   cursor: pointer;
   border-right: 2px solid;
   height: 30px;
-  line-height: 32px;
+  line-height: 30px;
   padding-right: 5px;
   width: 30px;
 }
