--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: "Varela Round", sans-serif;
+}
 
+
+body.mat-typography  .mat-table,
+body.mat-typography  .mat-list-item,
+body.mat-typography  .mat-h1,
+body.mat-typography  .mat-headline,
+body.mat-typography  .mat-typography h1,
+body.mat-typography  .mat-toolbar,
+body.mat-typography  .mat-toolbar h1,
+body.mat-typography  .mat-toolbar h2,
+body.mat-typography  .mat-toolbar h3,
+body.mat-typography  .mat-toolbar h4,
+body.mat-typography  .mat-toolbar h5,
+body.mat-typography  .mat-toolbar h6,
+body.mat-typography  span,
+body.mat-typography  strong,
+body.mat-typography  p,
+body.mat-typography  a,
+body.mat-typography  li,
+body.mat-typography  label,
+body.mat-typography  input,
+body.mat-typography  th,
+body.mat-typography  td,
+body.mat-typography  button,
+body.mat-typography  h1,body.mat-typography  h2,body.mat-typography  h3,body.mat-typography  h4,body.mat-typography  h5,body.mat-typography  h6,
+body.mat-typography  .mat-input-element {
+    font-family: "Varela Round", Roboto, "Helvetica Neue", sans-serif;
+}
 .buttons {
     background-color: rgb(213, 213, 226);
     border-radius: 5px;
@@ -20,6 +50,7 @@
 html,
 body {
     height: 100%;
+    font-family: "M PLUS Rounded 1c", sans-serif;
 }
 
 .fw-bold {
@@ -64,7 +95,7 @@ mat-sidenav-container {
 mat-nav-list {
     display: block;
     height: calc(100vh - 70px);
-    background-color: #393a3b6b;
+    background-color: #0000006b;
     color: white;
     text-align: right;
     direction: rtl;
@@ -81,9 +112,9 @@ mat-nav-list a:hover {
 mat-nav-list a {
     display: block;
     text-decoration: none;
-    font-size: 16px;
-    line-height: 50px;
-    border-bottom: 1px solid rgb(235, 235, 235);
+    font-size: 14px;
+    line-height: 40px;
+
     color: white !important;
     margin: 2px 20px;
 }
@@ -101,10 +132,10 @@ mat-sidenav-container {
 .table-wrapper h1,
 .mat-typography h1.h1-title {
     text-align: center;
-    color: #dd6d78;
+    color: #d2232a;
     font-weight: 100;
-    font-size: 2.5rem;
-    line-height: 5rem;
+    font-size: 2.2rem;
+    line-height: 4rem;
     border-bottom: 1px solid;
     width: 250px;
     margin: auto;
@@ -124,7 +155,7 @@ mat-sidenav-container {
 .form-wrapper label,
 mat-cardlabel {
     font-weight: 100;
-    font-size: medium;
+    font-size: 14px;
     margin-bottom: 0.3rem;
 }
 
@@ -223,15 +254,16 @@ mat-cardlabel {
     position: relative;
     border: none;
     text-align: center;
-    background-color: #dd6d78;
+    background-color: #d2232a;
 }
-.input {
+.input,select {
     border-radius: 15px;
-    border: 2px solid #dd6d78;
+    border: 2px solid #d2232a;
     font-size: 14px;
     line-height: 32px;
     height: 32px;
     padding: 0 5px;
+    min-width: 200px;
 }
 .form-wrapper,
 .form-wrapper-100 {
@@ -239,21 +271,24 @@ mat-cardlabel {
     margin: 20px auto;
     padding: 30px;
     direction: rtl;
-    color: #dd6d78 !important;
+    color: #d2232a !important;
     flex-grow: 1;
     position: relative;
-    font-size: 18px;
-    line-height: 36px;
+    font-size: 14px;
+    line-height: 26px;
     max-width: 400px;
     min-width: 300px;
     opacity: 0.8;
     height: calc(90% - 124px);
     top: 5%;
-    box-shadow: -1px 0px 0px 0px #dd6d78, -1px -2px 20px 0px #dd6d78, 0px 0px 10px -5px #dd6d78;
+    background: linear-gradient(#d2232a24, #ffffff00, #d2232a24);
+    /* border: 2px solid #d2232a; */
+    box-shadow: 0 16px 38px -12px rgb(155 155 155 / 56%), 0 4px 25px 0 rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(0 0 0 / 20%);
 }
 .form-wrapper button,
 .form-wrapper button.buttons,
-.buttons {
+.buttons,
+.buttons-nocolor {
     width: 100%;
     max-width: 200px;
     color: #fff !important;
@@ -270,12 +305,17 @@ mat-cardlabel {
     -moz-user-select: none;
     user-select: none;
     background-color: transparent;
-    border: 1px solid transparent;
+    border: 2px solid transparent;
     padding: 0.375rem 0.75rem;
     font-size: 1.5rem;
     border-radius: 20px;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
         box-shadow 0.15s ease-in-out;
+}
+.buttons-nocolor{
+    color: #dc3545 !important;
+    background-color: #fff  !important;
+    border-color: #dc3545;  
 }
 .icon-back {
     cursor: pointer;
@@ -291,7 +331,7 @@ mat-cardlabel {
     border: 3px solid;
     padding-right: 5px;
     margin-left: -2px;
-    color: #dd6d78;
+    color: #d2232a;
     border-radius: 50%;
     cursor: pointer;
 }
@@ -303,13 +343,13 @@ mat-cardlabel {
     border: 3px solid;
     padding-right: 5px;
     margin-left: -2px;
-    color: #dd6d78;
+    color: #d2232a;
     border-radius: 50%;
     cursor: pointer;
 }
 
 .mat-icon.mat-set {
-    color: #dd6d78;
+    color: #d2232a;
     border: 1px solid;
     border-radius: 50%;
     height: 30px;
@@ -323,7 +363,16 @@ mat-cardlabel {
 }
 
 .mat-set:hover {
-    background-color: #dd6d78;
+    background-color: #d2232a;
     color: white;
     border-color: white;
+}
+.logo {
+    background-image: url("../src/assets/logo.png");
+    width: 120px;
+    height: 100px;
+    z-index: 111;
+    background-size: contain;
+    background-repeat: no-repeat;
+    float: right;
 }
