--- a/src/app/components/add-fault/add-fault.component.html
+++ b/src/app/components/add-fault/add-fault.component.html
@@ -1,4 +1,5 @@
-<form>
+<form class="form-wrapper">
+    <h1>הוספת תקלה</h1>
     <!-- <label for="building">:בניין</label><br>
     <select id="building">
         <option selected="true" disabled >{{this.dayarSer.dayar.FirstName}}-{{ this.dayarSer.dayar.Phone}}</option>
