--- a/src/app/components/faults/faults.component.html
+++ b/src/app/components/faults/faults.component.html
@@ -1,7 +1,7 @@
 <h1 class="h1-title">תקלות</h1>
 
 <br>
-<h6>סנן</h6>
+<!-- <h6>סנן</h6> -->
 <div class="row">
     <!-- <label>בחר רמת דחיפות התקלה לסינון</label> -->
     <select (change)="sortByUrgency($event)">
