--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -37,7 +37,7 @@
                   <label class="form-label">.לא נשתף את כתובת האימייל שלך עם אף אחד אחר</label>
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">סיסמא</label>
+                  <label for="exampleInputPassword1" class="form-label">סיסמה</label>
                   <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="d.PsWord"
                     name="pass">
                 </div>
@@ -53,8 +53,8 @@
   
   <div class="center pb-2 mx-auto">
     <div class="my-5">
-      <h2 id='#aboutUs' class="fw-bold mb-0">?מה הוא יכול לעשות עבורכם</h2>
-      <p>אלו רק חלק מהיכולות המדהימות של וועד חכם</p>
+      <h2 id="aboutUs" class="fw-bold mb-0">?מה הוא יכול לעשות עבורכם</h2>
+      <p>אלו רק חלק מהיכולות המדהימות של ועד חכם</p>
     </div>
     <table class="mx-auto mb-5">
       <tr>
@@ -186,6 +186,7 @@
       </table>
     </div>
   
+    
 <!-- <p>...אחינועם שלושת הקישורים פה למטה הם לא אמורים להיות פה בעיקרון אז  אל תתיחסי אליהם זה דפים שאמורים להשלח למייל של הדיירים אני באמצע.</p>
 <a routerLink="/password-change">
     אישור רישום ושינוי סיסמה
