--- a/src/app/components/list-dayarim/list-dayarim.component.html
+++ b/src/app/components/list-dayarim/list-dayarim.component.html
@@ -54,7 +54,7 @@
     </table>
 </div>
 <!-- <mat-paginator #paginator pageSize=6 showFirstLastButtons></mat-paginator> -->
-
+</div>
 
 <div *ngIf="isShow===false">
     <app-edit-dayar [dayar]="dayarToEdit" (onSave)="onMySave($event)"></app-edit-dayar>
